2007-12-11  Akim Demaille  <demaille@gostai.com>

	Fix exprToInt.
	* src/uvalue.cc: Cast the pointee, not the pointer.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	param[n].
	* src/unamedparameters.hh, src/unamedparameters.hxx (operator[]): New.
	* src/Makefile.am: Adjust.
	* src/uvalue.cc: Use it.

2007-12-07  Guillaume Deslandes  <deslandes@gostai.com>

	Fix typo.
	* ChangeLog: Here.

2007-12-07  Guillaume Deslandes  <deslandes@gostai.com>

	More delete of modif_.
	* src/ucommand.cc: Here.

2007-12-07  Guillaume Deslandes  <deslandes@gostai.com>

	Remove memory leaks.
	* src/ucommand.cc: Here.
	Delete expression for assign modifiers.
	Delete temporary list.

2007-12-07  Guillaume Deslandes  <deslandes@gostai.com>

	Remove const on temporary.
	* src/parser/bison/utoken.l: Here.
	It caused a compile error on VCxx.

2007-12-05  Guillaume Deslandes  <deslandes@gostai.com>

	Delete binds from objtable as well on connection deletion.
	Not doing so caused the kernel to segv when calling
	a method/constructor/destructor of a disconnected remote.
	* src/uconnection.cc: Here.

2007-12-04  Akim Demaille  <demaille@gostai.com>

	Support #push and #pop for synclines.
	* src/parser/bison/utoken.l: Do it.
	(synclines): New.
	* src/userver.cc (loadFile): Push and pop the sync lines.

2007-12-04  Akim Demaille  <demaille@gostai.com>

	Fix #line parsing.
	* src/parser/bison/utoken.l: here.

2007-12-04  Akim Demaille  <demaille@gostai.com>

	Don't accept #line 3.14.
	* src/parser/bison/utoken.l (NATURAL): New.
	Use it.
	Don't accept #line 3.14e-13.

2007-12-04  Akim Demaille  <demaille@gostai.com>

	Too big a literal.
	* src/parser/bison/utoken.l (lexical_cast): New.
	Use it.
	(RETURN_TIMEVALUE): Binary now.
	Use RETURN_VAL_TOKEN.

2007-12-04  Akim Demaille  <demaille@gostai.com>

	Accept #line without file name.
	* src/parser/bison/utoken.l: here.
	* src/uconnection.cc: use it.

2007-12-04  Akim Demaille  <demaille@gostai.com>

	Issue floats as doubles.